2011-05-27 arne

	* fix a crash when resetting the focus view after a menu popup when that view was removed
	* add CViewContainer method to enable/disable autosizing

2011-05-26 arne

	* fix for CView::setVisible(false) not invalidating the view area
	* fix another scroll view issue

2011-05-22 arne

	* make CView::getViewSize() non virtual
	* replace nearly all direct uses of CView::size with CView::getViewSize()
	* fix a scroll view issues

2011-05-20 arne

	* replace checks for emptiness of std container from size () > 0 to empty () == false
	* update copyright year

2011-05-17 arne

	* fix horizontal auto drag scrolling in CScrollView
	* prevent transforming a CSplitView or CScrollView to another view in UIEditFrame to fix a crash
	* define NDEBUG if DEBUG is not defined so that asserts are not triggered in Release builds
	* more documentation

2011-05-06 arne

	* add CView idle mechanism
	* CVuMeter uses CView idle mechanism for smooth meter fallback
	* CFrame disable invalidating views if CView::kDirtyCallAlwaysOnMainThread is true

2011-04-30 arne

	* fix CKickButton key down repeat triggering beginEdit more than once
	* remove usage of isTypeOf("CViewContainer") and instead use dynamic_cast/reinterpret_cast
	* add assert in CView::attached(CView* parent) that checks that the parent is a CViewContainer, other types are not supported !
	* fix drawcontext on windows did not work with globalAlpha other than 1 for fillLinearGradient

2011-04-25 arne

	* fix a memory leak in CFontChooser
	* rearrange some code in uidescription
	* CSplitView docs and fixes

2011-04-22 arne

	* fix CVuMeter decreaseValue not working as expected
	* moved all uses of kMsgCheckIfViewContainer into the deprecated macro

2011-04-06 arne

	* fix control-click in cocoa not a right click
	* fix an update bug with COptionMenu not setting the value correctly on popup
	* gdiplus line style implementation

2011-03-29 arne

	* add immediate text change style to CTextEdit